# Pancake

./: CMakeLists.txt  README.md
src/: belt.cpp  belt.hpp  environment.cpp  environment.hpp  pancake.cpp  stack.cpp  stack.hpp  token.cpp  token.hpp  words.cpp  words.hpp
